# vui-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.changeset/: README.md  anchored-element-rect-and-click-focus.md  autocomplete-anchored-overlay.md  autocomplete-empty-text.md  autocomplete-tab-complete.md  bold-trams-read.md  cache-text-measurement.md  chilly-files-sing.md  chubby-pandas-mate.md  clever-sheep-sin.md  config.json  curvy-clowns-follow.md  dialog-select-highlight-event.md  dialog-select-hover-highlight.md  dollar-skill-token-highlight.md  editable-select-to-copy.md  embedded-native-lib-bun-compile.md  famous-steaks-start.md  fancy-eggs-lie.md  fifty-foxes-turn.md  fix-package-exports-dist.md  fix-workspace-dep-resolution.md  flhhk-lsmmm-ocvtr.md  fresh-textareas-submit.md  gentle-wolves-sip.md  grumpy-falcons-follow.md  hip-worlds-write.md  input-ctrl-c-capture.md  input-cursor-blink.md  input-placeholder-cursor.md  input-readline-line-editing.md  legal-ways-camp.md  markdown-table-border-active.md  markdown-table-grid-weight.md  markdown-table-sync-width.md  markdown-table-wrap.md  monokai-pro-theme.md  mouse-wheel-input-leak.md  onctrlc-host-hook.md  platform-native-packages.md  (+10 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/vui-core/: Cargo.toml
crates/vui-core/src/: ansi.rs  border.rs  buffer.rs  color.rs  edit_buffer.rs  image.rs  layout.rs  lib.rs  node.rs  paint.rs  perf.rs  renderer.rs  style.rs  width.rs  wrap.rs
crates/vui-core/src/ffi/: canvas.rs  edit.rs  image.rs  mod.rs  node.rs  render.rs  text.rs
crates/vui-core/src/text/: edit_buffer.rs  editor_view.rs  mod.rs  rope.rs  text_buffer.rs  text_buffer_view.rs
docs/: code-standards.md
examples/: autosize-text.ts  counter.ts  draw-primitives.ts  form.ts  layout-tree.ts  package.json  paint-bench.ts  shims-vue.d.ts  smoke-version.ts  streaming-bench.ts  vite-factory.ts
examples-sfc/: App.vue  counter.vue  form.vue  main.ts  package.json  shims-vue.d.ts  vite.config.ts
scripts/: abi-probe.ts  build-native.ts  publish-packages.ts
(+52 files in other folders)
