[package]
name = "vui-core"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib: loaded by Bun via bun:ffi. rlib: lets `cargo test -p vui-core` link the
# crate for native unit tests in later phases.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Exact versions recorded in docs/code-standards.md.
unicode-width = "=0.2.2"
unicode-segmentation = "=1.13.3"
# Enabled in Phase 02 (taffy layout).
# taffy = "=0.10.1"
