[package]
name = "vui-core"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib: loaded by Bun via bun:ffi. rlib: lets `cargo test -p vui-core` link the
# crate for native unit tests in later phases.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Exact versions recorded in docs/code-standards.md.
unicode-width = "=0.2.2"
unicode-segmentation = "=1.13.3"
# Flexbox layout engine. Pinned exact; all taffy calls are isolated to
# layout.rs + style.rs so a version bump touches only those two files.
taffy = { version = "=0.10.1", default-features = false, features = ["std", "taffy_tree", "flexbox", "content_size"] }
